[gd_scene load_steps=3 format=3 uid="uid://b1yspb86yds2u"]

[ext_resource type="Script" uid="uid://bg8m2as17y6sb" path="res://Scripts/UI/LevelUpScreen.gd" id="1_gjcfp"]
[ext_resource type="PackedScene" uid="uid://iyt206rb01yj" path="res://Scenes/UI/UpgradeCard.tscn" id="2_t6rig"]

[node name="LevelUpScreen" type="CanvasLayer"]
layer = 11
script = ExtResource("1_gjcfp")

[node name="DimBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="CardsContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -175.0
offset_right = 375.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="UpgradeCard" parent="CardsContainer" instance=ExtResource("2_t6rig")]
layout_mode = 2

[node name="UpgradeCard2" parent="CardsContainer" instance=ExtResource("2_t6rig")]
layout_mode = 2

[node name="UpgradeCard3" parent="CardsContainer" instance=ExtResource("2_t6rig")]
layout_mode = 2
